--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
                 "Aron\\Warehouse\\Provider\\WarehouseServiceProvider"
             ],
             "aliases": {
-                "Signature": "Aron\\Warehouse\\Facades\\Warehouse"
+                "Warehouse": "Aron\\Warehouse\\Facades\\Warehouse"
             }
         }
     }
